--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "isomorphic-fetch": "^2.2.1",
     "next": "^9.4.4",
     "next-routes": "^1.4.2",
+    "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "slugify": "^1.4.2"
